Fixes #1024 - Configure OortComet transports in web.xml.
Introduced new init-param "clientTransportFactories", a comma-separated list of ClientTransport.Factory implementations.
Added parameter-less constructors to allow creation of the available implementations.
Added test case.
Updated documentation.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>